# libwave

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/modules/: FindOpenCV.cmake  FindPoco.cmake
demos/: CMakeLists.txt
demos/VideoStreamingServer/: CMakeLists.txt  VideoProcessEngine.cpp  VideoProcessEngine.h  VideoPushingThread.h  VideoStreamingServerApp.cpp  VideoStreamingServerApp.h  default.properties  main.cpp
include/libvsd/: CommonStruct.h  NamedMutexScopedLock.h  StringUtility.h
include/libvsd/VideoStreamDecoders/: MP4VideoStreamDecoder.h  USBWebCamStreamDecoder.h  VideoStreamDecoder.h  VideoStreamDecoderFactory.h
include/libwave/VideoStreamDecoders/: MP4VideoStreamDecoder.h  RTSPStreamDecoder.h  USBWebCamStreamDecoder.h  VideoStreamDecoder.h
libwave/: CMakeLists.txt
libwave/include/: ErrCode.h
libwave/include/VideoStreamDecoders/: MP4VideoStreamDecoder.h  USBWebCamStreamDecoder.h  VideoStreamDecoder.h  VideoStreamDecoderFactory.h
libwave/include/VideoStreamProcess/: VideoPlayingThread.h  VideoPushingThread.h
libwave/src/VideoStreamDecoders/: MP4VideoStreamDecoder.cc  RTSPStreamDecoder.cc  USBWebCamStreamDecoder.cc  VideoStreamDecoder.cc  VideoStreamDecoderFactory.cc  resizeImageGPU.h
libwave/src/VideoStreamProcess/: VideoPlayingThread.cpp  VideoPushingThread.cpp
libwave/src/cuda/: resizeImageGPU.cu
src/: CMakeLists.txt  CommonStruct.h  DragonFly.properties  ErrCode.h  Goku.properties  MP4VideoStreamDecodeThread.cc  MP4VideoStreamDecodeThread.h  NamedMutexScopedLock.h  ObjectDetectThread.cc  ObjectDetectThread.h  RTSPStreamDecodeThread.cc  RTSPStreamDecodeThread.h  StringUtility.h  USBWebCamStreamDecodeThread.cc  USBWebCamStreamDecodeThread.h  VideoDecodeThread.cc  VideoDecodeThread.h  VideoDetectApp.cc  VideoDetectApp.h  VideoDetectDemo.properties  VideoDetectThread.cc  VideoDetectThread.h  VideoStreamDecodeThread.cc  VideoStreamDecodeThread.h  VideoStreamDecodeThreadFactory.cc  VideoStreamDecodeThreadFactory.h  main.cc  resizeImageGPU.cu  yuv2bgr.cu  yuv2bgr.h
src/demos/: CMakeLists.txt  README.md
src/demos/ObjectDetection/: CMakeLists.txt  ObjectDetectThread.cc  ObjectDetectThread.h  README.md  VideoDetectApp.cc  VideoDetectApp.h  main.cc
src/demos/VideoPlayer/: CMakeLists.txt  README.md
src/demos/VideoPlayer/hw/: CMakeLists.txt  VideoPlayerApp.cpp  VideoPlayerApp.h  main.cpp
src/demos/VideoPlayer/nohw/: CMakeLists.txt  main.cpp
src/demos/VideoStreamingServer/: CMakeLists.txt  NamedMutexScopedLock.h  VideoPushingThread.cpp  VideoPushingThread.h  VideoStreamingServerApp.cpp  VideoStreamingServerApp.h  default.properties  main.cpp
src/libvsd/: CMakeLists.txt
src/libvsd/VideoStreamDecoders/: MP4VideoStreamDecoder.cc  RTSPStreamDecoder.cc  USBWebCamStreamDecoder.cc  VideoStreamDecoder.cc  VideoStreamDecoderFactory.cc
src/libwave/: CMakeLists.txt
src/libwave/VideoStreamDecoders/: MP4VideoStreamDecoder.cc  RTSPStreamDecoder.cc  USBWebCamStreamDecoder.cc  VideoStreamDecoder.cc  VideoStreamDecoderFactory.cc
src/libwave/cuda/: yuv2bgr.cu
